--- a/src/main/resources/plugin.yml.templ
+++ b/src/main/resources/plugin.yml.templ
@@ -1,6 +1,6 @@
 name: SaveState
 main: net.gliewe.savestate.SaveStatePlugin
-version: 0.3.2
+version: ${version}
 depend: [WorldGuard, WorldEdit]
 commands:
   savestate:
